fix - checkout add more bottom space to voucher on mobile

--- a/src/Volo/FrontendBundle/Resources/public/css/pages/checkout.scss
+++ b/src/Volo/FrontendBundle/Resources/public/css/pages/checkout.scss
@@ -615,6 +615,10 @@
 
   .checkout__item {
     border: none;
+    margin-bottom: 25px;
+    @include respond-from("screen-md") {
+      margin-bottom: 0;
+    }
   }
 }
 
